package server.connection

// Importa los paquetes y definiciones necesarios.

// Define la estructura del servidor
type MyServer struct {
  // Agrega cualquier estado necesario del servidor aquí.
}

// Implementa los métodos gRPC definidos en el archivo .proto
func (s *MyServer) RequestConnection(ctx context.Context, request *ConnectionRequest) (*Acknowledge, error) {
  // Lógica para procesar la solicitud de conexión.
  // Puedes verificar la solicitud y decidir si aceptarla o rechazarla.
  // Retorna el "acknowledge" correspondiente.
}

func (s *MyServer) SendAcknowledge(ctx context.Context, acknowledge *Acknowledge) (*Acknowledge, error) {
  // Lógica para procesar el "acknowledge" recibido desde el cliente.
  // Puedes realizar acciones basadas en el mensaje de confirmación.
  // Retorna una respuesta si es necesario.
}
